Fixed css collapsable

--- a/v3/static/css/style.css
+++ b/v3/static/css/style.css
@@ -890,3 +890,11 @@ video:focus {
   background-color: #fff;
   border-bottom: 1px solid #ddd;
 }
+
+.collapsible-body {
+  display: none;
+  border-bottom: 1px solid #ddd;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 2rem;
+}
